# cubecl

crates/cubecl-sort/: Cargo.toml  README.md
crates/cubecl-sort/src/: lib.rs
examples/sorting/: Cargo.toml
examples/sorting/examples/: sorting.rs
examples/sorting/src/: lib.rs
