[package]
authors = []
name = "sorting"
publish = false
edition.workspace = true
license.workspace = true
version.workspace = true

[features]
default = []
wgpu = ["cubecl/wgpu"]
cuda = ["cubecl/cuda"]

[dependencies]
cubecl = { path = "../../crates/cubecl", version = "0.2.0" }
half = { workspace = true }
rand = "0.8"